--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@ body {
 }
 
 header {
-    margin: 30px 30px 0px 30px;
     border: 5px solid whitesmoke;
     border-radius: 10px;
-    box-shadow: 5px 5px rgba(0, 0, 0, .1);
-    background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253));
+    box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
+    /* background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253)); */
     grid-column: span 12;
+    background-image: linear-gradient(rgb(52, 104, 124), rgb(37, 37, 102), rgb(7, 66, 56),rgb(10, 198, 245));
 }
 
 #title{
@@ -39,20 +39,25 @@ header {
     padding: 10px;
 }
 
+#contact {
+    padding-right: 30px;
+    padding-bottom: 40px;
+}
+
 #together {
     grid-column: 1/ span 6;
-    margin: 0;
 }
 
 #bio{
     background-color: #5bb3b9;
     border: 5px solid whitesmoke;
     border-radius: 10px;
-    box-shadow: 5px 5px rgba(0, 0, 0, .1);
-    background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253));
+    box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
+    /* background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253)); */
     padding: 10px 30px;  
     margin-bottom: 20px;
     font-weight: 500;
+    background-image: linear-gradient(rgb(52, 104, 124), rgb(37, 37, 102), rgb(7, 66, 56),rgb(10, 198, 245));
 }
 
 
@@ -60,10 +65,11 @@ header {
     grid-column: 5 / span 7;
     border: 5px solid whitesmoke;
     border-radius: 10px;
-    box-shadow: 5px 5px rgba(0, 0, 0, .1);
-    background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253));
+    box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
+    /* background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253)); */
     padding: 10px 30px; 
     font-weight: 500;
+    background-image: linear-gradient(rgb(52, 104, 124), rgb(37, 37, 102), rgb(7, 66, 56),rgb(10, 198, 245));
 }
 
 #mypic {
@@ -71,17 +77,14 @@ header {
     height: 300px;
     border-radius: 10px;
     border: 5px solid whitesmoke;
-}
-
-img:hover {
-    transform: scale(1.3);
+    box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
 }
 
 h2 {
     grid-column: span 12;
     text-align: center;
     font-size: 3.5rem;
-    box-shadow: #57626d 5px 5px;
+    box-shadow: 5px 5px #57626d, 5px 5px pink;
     border-radius: 10px;
     background-color: rgba(252, 252, 252, 0.7);
 }
@@ -98,35 +101,32 @@ h2 {
     box-shadow: #57626d 5px 5px;
 }
 
-.skills:hover, #bio:hover, #myPassions:hover{
-    transform: scale(1.5);
+.skills:hover, #bio:hover, #myPassions:hover, img:hover, .card:hover{
+    transform: scale(1.2);
 }
 
 #skillsDiv {
-    /* display: flex;
+    display: flex;
     gap: 40px;
-    flex-wrap: wrap;  */
-    border: 2px solid black;
-    border-radius: 10px;
+    flex-wrap: wrap; 
+    justify-content: center;
+    border: 5px solid whitesmoke;
     grid-column: 3 / span 8;
     border-radius: 10px;
-    box-shadow: 5px 5px rgba(0, 0, 0, .1);
-    background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253));
+    box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
+    /* background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253)); */
     padding: 40px;
+    background-image: linear-gradient(rgb(52, 104, 124), rgb(37, 37, 102), rgb(7, 66, 56),rgb(10, 198, 245));
 }
 
 
-.project {
-    border: black 2px solid;
-    height: 100px;
-    width: 100px;
+#project {
+    display: flex;
     grid-column: span 12;
+    gap: 30px;
+    margin: 20px;
 } 
 
-.project {
-    display: flex;
-    width: 100%;
-}
 
 .card {
     background-color: rgba(219, 233, 245, 0.9);
@@ -134,12 +134,29 @@ h2 {
     border-radius: 10px;
     padding: 10px;
     font-weight: 400;
-    grid-column: 7/ span 6;
+    border-radius: 10px;
+    border: 5px solid whitesmoke;
+    box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
 }
 
 
 .screenshot {
-    grid-column: 1/ span 5;
-    width: 300px;
-    height: 300px;
+    border: 5px black solid;
+    width: 500px;
+    border-radius: 10px;
+    border: 5px solid whitesmoke;
+    box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
+}
+
+.tu {
+    background-color: yellowgreen;
+}
+
+.cont {
+    object-fit: contain;
+    background-color: rgb(226, 168, 61);
+}
+
+#ecom {
+    width: 100rem;;
 }
