--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     background-attachment: fixed;
     background-size: 100% 100%;
     background-color: #5bb3b9;
+    justify-content: center;
 }
 
 .grid {
