--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 header {
-    margin: 30px;
+    margin: 25px;
     border: 5px solid whitesmoke;
     border-radius: 10px;
     box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
@@ -31,7 +31,7 @@ header {
 
 #title{
     margin: auto;
-    font-size: 60px; 
+    font-size: 40px; 
     padding: 10px;
     grid-column: span 6;
 }
@@ -44,13 +44,13 @@ nav {
 
 a {
     color: white;
-    font-size: 16px;
+    font-size: 12px;
     margin: 30px;
 }
 
 #name{
     margin: auto;
-    font-size: 30px;
+    font-size: 20px;
     padding: 10px;
     grid-column: span 6;
 
@@ -62,6 +62,7 @@ a {
     display: flex;
     gap: 50px;
     margin-left: 40px;
+    font-size: 12px;
 }
 
 #sectionIntro {
@@ -74,11 +75,11 @@ a {
     border-radius: 10px;
     box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
     /* background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253)); */
-    padding: 80px;  
+    padding: 25px;  
     font-weight: 500;
     background-image: linear-gradient(rgb(52, 104, 124), rgb(37, 37, 102), rgb(7, 66, 56),rgb(10, 198, 245));
     margin: 30px;
-    font-size: 20px;
+    font-size: 14px;
     grid-column: span 7;
     position: relative;
     
@@ -94,14 +95,14 @@ a {
     font-weight: 500;
     background-image: linear-gradient(rgb(52, 104, 124), rgb(37, 37, 102), rgb(7, 66, 56),rgb(10, 198, 245));
     position: inherit;
-    left: 200px;
-    top: -150px;
-    font-size: 15px;
+    left: 160px;
+    top: -40px;
+    font-size: 12px;
 }
 
 #mypic {
-    width: 700px;
-    height: 300px;
+    width: 500px;
+    height: 250px;
     border-radius: 10px;
     border: 5px solid whitesmoke;
     box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
@@ -124,8 +125,8 @@ h2 {
 
 .skills{
     background-color: white;
-    width: 90px;
-    height: 90px;
+    width: 60px;
+    height: 60px;
     border-radius: 5px;
     box-shadow: #57626d 5px 5px;
 
@@ -134,17 +135,16 @@ h2 {
 
 #skillsDiv {
     display: flex;
-    gap: 60px;
+    gap: 40px;
     flex-wrap: wrap; 
     justify-content: center;
     border: 5px solid whitesmoke;
-    grid-column: 4 / span 6;
+    grid-column: 3 /  span 7;
     border-radius: 10px;
     box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
-    /* background-image: linear-gradient(rgb(52, 52, 124), rgb(37, 37, 102), rgb(70, 70, 185), rgb(86, 86, 253)); */
-    padding: 70px;
+    padding: 50px;
     background-image: linear-gradient(rgb(52, 104, 124), rgb(37, 37, 102), rgb(7, 66, 56),rgb(10, 198, 245));
-    margin: 40px auto;
+    margin: 60px auto;
 }
 
 
@@ -162,13 +162,13 @@ h2 {
     color: rgb(10, 10, 41);
     border-radius: 10px;
     padding: 20px;
-    font-weight: 400;
+    font-weight: 300;
     border-radius: 10px;
     border: 5px solid whitesmoke;
     box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
     margin-top: 100px;
-    width: 700px;
-    height: 400px;
+    width: 600px;
+    height: 300px;
     align-content: center;
 
 }
@@ -179,26 +179,20 @@ h2 {
     border-radius: 10px;
     border: 5px solid whitesmoke;
     box-shadow: 5px 5px rgba(0, 0, 0, .3), 5px 5px pink;
-    width: 500px;
-    height: 400px;
+    width: 400px;
+    height: 300px;
     margin-top: 100px;
     object-fit: fill;
-    
+}
 
+.description {
+    font-size: 12px;
 }
 
 .tu {
     background-color: yellowgreen;
 }
 
-/* .cont {
-    object-fit: contain;
-    background-color: rgb(226, 168, 61);
-}
-
-#ecom {
-    width: 100rem;;
-} */
 
 .division {
     border: rgb(88, 75, 75) solid 15px;
